[FIX] festivalId type 변경